Closed Bug 170588 Opened 22 years ago Closed 21 years ago

[FIXr]frames (not just iframes) should own their content viewer/DOM (frame reload when frameset changed in some ways)

Categories

(Core :: Layout: Images, Video, and HTML Frames, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha1

People

(Reporter: rwells, Assigned: bzbarsky)

References

Details

Attachments

(2 files, 3 obsolete files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1) Gecko/20020826 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.1) Gecko/20020826 Ok this is a weird one. If you have an iframe on a page and inside that iframe you load a frameset with one or more frames. If that iframe is initially set to dispaly:none the contents of the frameset will not be loaded. If you subsequently set the display value to '' the contents of the frameset will then load at this point. What worse is if you repeatedly set and unset the dispaly value the contents get reloaded everytime. This is important if you are trying to build dynamic widgets and you want to make sure the whole thing is finished loading before displaying it to the user. You should be able to load things into hidden frames like this and then display them later with out reloading the pages. Reproducible: Always Steps to Reproduce: 1.Create a page with an iframe and set style="display:none" 2.set src of iframe to a frameset document. 3.use dom inspector to explore loaded tree or set an onload event on one of the inner frames loaded by frameset so you can see that the pages all loaded. Actual Results: inner frames do not load. Expected Results: all frames should have loaded.
ho-hum. Confirming. Though I have a hard time believing we don't have a bug on this already... jst, how painful would this be to do? Could your iframe changes be "easily" ported over to this stuff? (god I hate frames...)
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 2000 → All
Hardware: PC → All
This shouldn't be incredibly hard to do now, and IMO it should be done. All the plumbing is there, we'd just need to hook things up (i.e. make nsHTMLFrameElement an nsIFrameLoaderOwner)...
Yeah, I agree we should do it if it's feasible... I suppose I could give this a shot sometime, but it'll be weeks before that happens if not months...
*** Bug 170730 has been marked as a duplicate of this bug. ***
Summary: Contents of frameset loaded inside an iframe does not get loaded if iframe has style="display:none" → frames (not just iframes) should own their content viewer/DOM (frame reload when frameset changed in some ways)
Priority: -- → P3
Target Milestone: --- → Future
Attachment #100451 - Attachment is obsolete: true
Attachment #100452 - Attachment is obsolete: true
Attachment #100453 - Attachment is obsolete: true
Attached patch So like thisSplinter Review
Comment on attachment 145218 [details] [diff] [review] So like this jst, would you review? I went with an nsGenericHTMLFrameElement class instead of nsFrameLoadingContent or something because I wanted to push the SetDocument/SetParent/SetAttr gunk up into it... The code there is mostly copied from nsHTMLIFrameElement, but I made some changes to GetContentDocument/GetContentWindow
Attachment #145218 - Flags: superreview?(jst)
Attachment #145218 - Flags: review?(jst)
Comment on attachment 145218 [details] [diff] [review] So like this Yeah, this looks all good, but this'll need a fair bit of testing before I'd want it in a release. 1.8a material IMO.
Attachment #145218 - Flags: superreview?(jst)
Attachment #145218 - Flags: superreview+
Attachment #145218 - Flags: review?(jst)
Attachment #145218 - Flags: review+
Yeah, definitely.
Assignee: john → bzbarsky
Priority: P3 → P1
Summary: frames (not just iframes) should own their content viewer/DOM (frame reload when frameset changed in some ways) → [FIXr]frames (not just iframes) should own their content viewer/DOM (frame reload when frameset changed in some ways)
Target Milestone: Future → mozilla1.8alpha
Checked in for 1.8a.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
*** Bug 243992 has been marked as a duplicate of this bug. ***
Product: Core → Core Graveyard
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: