Make <frame> elements own their own content viewer/docshell/dom like iframes already do.  Refactors some code the two shared into a superclass.  Bug 170588, r+sr=jst